--- a/client/src/Templates.css
+++ b/client/src/Templates.css
@@ -154,7 +154,7 @@
         font-size: 1.5rem;
     }
 
-    .create-btn {
+    .templates-header .create-btn {
         display: none;
     }
 
